--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 django-cors-headers = "^4.2.0"
 djangorestframework-simplejwt = "^5.3.0"
 drf-yasg = "^1.21.7"
+black = "^23.9.1"
 
 
 [build-system]
