--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-cors-headers = "^4.2.0"
 djangorestframework-simplejwt = "^5.3.0"
 drf-yasg = "^1.21.7"
 black = "^23.9.1"
+python-dateutil = "^2.8.2"
 
 
 [build-system]
