--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "^5.3.0"
 drf-yasg = "^1.21.7"
 black = "^23.9.1"
 python-dateutil = "^2.8.2"
+django-environ = "^0.11.2"
 
 
 [build-system]
