--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-asgiref==3.7.2
-black==23.9.1
-click==8.1.7
-Django==4.2.5
-django-cors-headers==4.2.0
-django-environ==0.11.2
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-drf-yasg==1.21.7
-inflection==0.5.1
-mypy-extensions==1.0.0
-packaging==23.1
-pathspec==0.11.2
-platformdirs==3.11.0
-PyJWT==2.8.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-six==1.16.0
-sqlparse==0.4.4
-uritemplate==4.1.1
+asgiref==3.7.2 ; python_version >= "3.11" and python_version < "4.0"
+black==23.9.1 ; python_version >= "3.11" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
+django-cors-headers==4.2.0 ; python_version >= "3.11" and python_version < "4.0"
+django-environ==0.11.2 ; python_version >= "3.11" and python_version < "4"
+django==4.2.5 ; python_version >= "3.11" and python_version < "4.0"
+djangorestframework-simplejwt==5.3.0 ; python_version >= "3.11" and python_version < "4.0"
+djangorestframework==3.14.0 ; python_version >= "3.11" and python_version < "4.0"
+drf-yasg==1.21.7 ; python_version >= "3.11" and python_version < "4.0"
+inflection==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
+packaging==23.1 ; python_version >= "3.11" and python_version < "4.0"
+pathspec==0.11.2 ; python_version >= "3.11" and python_version < "4.0"
+platformdirs==3.11.0 ; python_version >= "3.11" and python_version < "4.0"
+pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
+pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
+pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
+sqlparse==0.4.4 ; python_version >= "3.11" and python_version < "4.0"
+tzdata==2023.3 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
+uritemplate==4.1.1 ; python_version >= "3.11" and python_version < "4.0"
