--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ drf-yasg = "^1.21.7"
 black = "^23.9.1"
 python-dateutil = "^2.8.2"
 django-environ = "^0.11.2"
+pymysql = "^1.1.0"
 
 
 [build-system]
