--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ packaging==23.1 ; python_version >= "3.11" and python_version < "4.0"
 pathspec==0.11.2 ; python_version >= "3.11" and python_version < "4.0"
 platformdirs==3.11.0 ; python_version >= "3.11" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
+pymysql==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
